nullaway_error_A2E686BB-D300-4DA0-94A5-623012EC65D7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/client/HttpMessageConverterExtractor.java:96: error: [NullAway] enhanced-for expression this.messageConverters is @Nullable
                        for (HttpMessageConverter<?> messageConverter : this.messageConverters) {
                                                                            ^
    (see http://t.uber.com/nullaway )
